# Mio_ktx

./: .gitignore  README.md  build.gradle  gradle.properties  jitpack.yml  mio.jks  settings.gradle
account/: build.gradle
account/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
base/: build.gradle
compose/: build.gradle.kts
compose/src/main/: AndroidManifest.xml
enc/: build.gradle.kts
enc/src/main/: AndroidManifest.xml
filemanager/: build.gradle.kts
filemanager/src/main/: AndroidManifest.xml
game/: build.gradle.kts
game/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: build.gradle.kts
jni/src/main/cpp/: CMakeLists.txt  NativeHelper.cpp  Socaffinity.cpp
launcher/: build.gradle.kts
launcher/src/main/: AndroidManifest.xml
launcher_ktx/: build.gradle.kts
launcher_ktx/src/main/: AndroidManifest.xml
music/: build.gradle
music/src/main/: AndroidManifest.xml
net.sf.capcode.library.S57Library/: .project
net.sf.capcode.library.S57Library/data/: s57attributes.csv  s57expectedinput.csv  s57objectclasses.csv
net.sf.capcode.library.S57Library/doc/: README.TXT  USOC2_1.doc
net.sf.capcode.library.S57Library/doc/design/: classes.odt
net.sf.capcode.library.S57Library/doc/specifications/: usoc2.odt
pathplanning/: build.gradle.kts
s57/: build.gradle.kts
script/: build.gradle
script/src/main/: AndroidManifest.xml
weather/: build.gradle
weather/src/main/: AndroidManifest.xml
yolo/: build.gradle
yolo/src/main/: AndroidManifest.xml
yolov5/: build.gradle
(+477 files in other folders)
